--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "mongo.js",
   "scripts": {
     "test": "llegue aqui por las instrucciones",
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
